tests/ambiguous_object_syntax_exact_by_default/ambiguous_object_syntax_exact_by_default.exp
Error -------------------------------------------------------------------------------------- <BUILTINS>/prelude.js:81:21

Please write this object type as explicitly exact (use `{|` and `|}` instead of `{` and `}`) or as explicitly inexact
(add `...` to the end of the list of properties). [ambiguous-object-type]

   81| declare var module: { exports: any }
                           ^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:3:10

Please write this object type as explicitly exact (use `{|` and `|}` instead of `{` and `}`) or as explicitly inexact
(add `...` to the end of the list of properties). [ambiguous-object-type]

   3| const x: {} = {}; // Lint
               ^^



Found 2 errors
